force-app/main/default/objects/Services_Received__c/Services_Received__c.object-meta.xml
<CustomObject>
    <label>Services Received Items</label>
    <nameField>
        <label>Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services Received Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>