force-app/main/default/objects/Services_Received__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Name</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Services Received Items</relationshipLabel>
    <relationshipName>Services_Received_Items</relationshipName>
    <type>Lookup</type>
</CustomField>