force-app/main/default/objects/Services_Received__c/fields/At_WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>At_WD_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If hire item to be situated at a WD UNIT please tick. A hire item may be situated at a WD Unit or at a 3rd Party location eg. Schlumberger</inlineHelpText>
    <label>At WD Unit</label>
    <type>Checkbox</type>
</CustomField>