force-app/main/default/objects/Services_Received__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Hire_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>