force-app/main/default/objects/Services_Received__c/fields/Client_PO__c.field-meta.xml
<CustomField>
    <fullName>Client_PO__c</fullName>
    <label>Client PO#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>