force-app/main/default/objects/Services_Received__c/fields/Collection_Delivery_Notes__c.field-meta.xml
<CustomField>
    <fullName>Collection_Delivery_Notes__c</fullName>
    <inlineHelpText>Details on how item was delivered to relevant location or collected from WD Base</inlineHelpText>
    <label>Collection/Delivery Notes</label>
    <type>TextArea</type>
</CustomField>