force-app/main/default/objects/Services_Received__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract #</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Services Received Items</relationshipLabel>
    <relationshipName>Services_Received_Items</relationshipName>
    <type>Lookup</type>
</CustomField>