force-app/main/default/objects/Services_Received__c/fields/Contract_unit__c.field-meta.xml
<CustomField>
    <fullName>Contract_unit__c</fullName>
    <label>Contract (by Unit)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>