force-app/main/default/objects/Services_Received__c/fields/Date_inactive__c.field-meta.xml
<CustomField>
    <fullName>Date_inactive__c</fullName>
    <label>Date Inactive</label>
    <type>Date</type>
</CustomField>