force-app/main/default/objects/Services_Received__c/fields/Hire_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Hire_Item_Category__c</fullName>
    <inlineHelpText>Charge - required as an extra item outside of Day Rate and therefore charge applies
No Charge - this may be an Item we had to hire in due to a break down/replacement or because we do not own it but have agreed to supply it in contract</inlineHelpText>
    <label>Hire Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Charge - Request from Client</fullName>
                <default>true</default>
                <label>Charge - Request from Client</label>
            </value>
            <value>
                <fullName>No Charge - Required by Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>