force-app/main/default/objects/Services_Received__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <inlineHelpText>The Item must be clearly identified by a WD Asset # or an ID Tag</inlineHelpText>
    <label>ID#</label>
    <length>30</length>
    <type>Text</type>
</CustomField>