force-app/main/default/objects/Services_Received__c/fields/Items_Returned_Owner__c.field-meta.xml
<CustomField>
    <fullName>Items_Returned_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only Tick when CERTAIN that ITEM is RETURNED to WD Base or to 3rd Party if it was hired in</inlineHelpText>
    <label>Item Returned to Owner</label>
    <type>Checkbox</type>
</CustomField>