force-app/main/default/objects/Services_Received__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Order #</label>
    <referenceTo>Job_Orders__c</referenceTo>
    <relationshipName>Hire_Items</relationshipName>
    <type>Lookup</type>
</CustomField>