force-app/main/default/objects/Services_Received__c/fields/Manifest_Attached__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All Hire Items should have a completed Manifest signed by client on pickup/delivery and on return/collection of item.</inlineHelpText>
    <label>Manifests Attached</label>
    <type>Checkbox</type>
</CustomField>