force-app/main/default/objects/Services_Received__c/fields/Operating_Category__c.field-meta.xml
<CustomField>
    <fullName>Operating_Category__c</fullName>
    <label>Operating Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Operating Hrs</fullName>
            </value>
            <value>
                <fullName>Rig Move Hrs</fullName>
            </value>
            <value>
                <fullName>Repair Hrs</fullName>
            </value>
            <value>
                <fullName>Travel Hrs</fullName>
            </value>
            <value>
                <fullName>Standby WC Hrs</fullName>
            </value>
            <value>
                <fullName>Standby WOC Hrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>