force-app/main/default/objects/Services_Received__c/fields/Operations__c.field-meta.xml
<CustomField>
    <fullName>Operations__c</fullName>
    <label>Operations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12hr</fullName>
            </value>
            <value>
                <fullName>24hr</fullName>
            </value>
            <value>
                <fullName>12hr/24hr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>