force-app/main/default/objects/Services_Received__c/fields/Owner_of_Hire_Item__c.field-meta.xml
<CustomField>
    <fullName>Owner_of_Hire_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>May be Wild Desert or 3rd Party supplied</inlineHelpText>
    <label>Owner of Hire Item</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Hire_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>