force-app/main/default/objects/Services_Received__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <inlineHelpText>Provide exact details of invoicing rate eg $300/day, recharge + 15%</inlineHelpText>
    <label>Rate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>