force-app/main/default/objects/Services_Received__c/fields/Rate_Category__c.field-meta.xml
<CustomField>
    <fullName>Rate_Category__c</fullName>
    <label>Rate Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>Hrly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>