force-app/main/default/objects/Services_Received__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Operating</fullName>
            </value>
            <value>
                <fullName>Rig Move</fullName>
            </value>
            <value>
                <fullName>SBWC</fullName>
            </value>
            <value>
                <fullName>SBWOC</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Crew Travel</fullName>
            </value>
            <value>
                <fullName>Inspection/PMS</fullName>
            </value>
            <value>
                <fullName>Primemover</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Water Tanker (Single)</fullName>
            </value>
            <value>
                <fullName>Bed Truck (30T)</fullName>
            </value>
            <value>
                <fullName>Prime Mover/Standby</fullName>
            </value>
            <value>
                <fullName>Single/Standby</fullName>
            </value>
            <value>
                <fullName>Double/Standby</fullName>
            </value>
            <value>
                <fullName>Bed Truck (30T)/Standby</fullName>
            </value>
            <value>
                <fullName>Water Tanker/Standby</fullName>
            </value>
            <value>
                <fullName>Primemover + Dolly</fullName>
            </value>
            <value>
                <fullName>Triple</fullName>
            </value>
            <value>
                <fullName>Bed Truck (30T) + 2 Trailer</fullName>
            </value>
            <value>
                <fullName>Bed Truck (30T) + Trailer</fullName>
            </value>
            <value>
                <fullName>Bed Truck (50T)</fullName>
            </value>
            <value>
                <fullName>Float</fullName>
            </value>
            <value>
                <fullName>Float + Dolly</fullName>
            </value>
            <value>
                <fullName>Hot Shot</fullName>
            </value>
            <value>
                <fullName>Loader</fullName>
            </value>
            <value>
                <fullName>Fridge Van</fullName>
            </value>
            <value>
                <fullName>Escort Driver</fullName>
            </value>
            <value>
                <fullName>Prime Mover + Dolly/Standby</fullName>
            </value>
            <value>
                <fullName>Triple/Standby</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>