force-app/main/default/objects/Services_Received__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional Item</fullName>
                <label>Additional (QA)</label>
            </value>
            <value>
                <fullName>Contract Item</fullName>
                <default>true</default>
                <label>Contract</label>
            </value>
            <value>
                <fullName>Stats Only</fullName>
            </value>
            <value>
                <fullName>Contract Amendment</fullName>
            </value>
            <value>
                <fullName>Related Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>