force-app/main/default/objects/Services_Received__c/fields/WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>WD_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If at a WD Unit please specify which one</inlineHelpText>
    <label>WD Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipName>Hire_Items</relationshipName>
    <type>Lookup</type>
</CustomField>