force-app/main/default/objects/Services_Received__c/recordTypes/Operations_Rig.recordType-meta.xml
<RecordType>
    <fullName>Operations_Rig</fullName>
    <active>true</active>
    <description>Hrly Rate specific to rig ops</description>
    <label>Fixed Hrly/Qty</label>
</RecordType>