force-app/main/default/objects/Services_Received__c/recordTypes/Operations_Transport.recordType-meta.xml
<RecordType>
    <fullName>Operations_Transport</fullName>
    <active>true</active>
    <description>Hrly Rates Specific to Transport</description>
    <label>Operations - Transport</label>
</RecordType>