force-app/main/default/objects/Services_Received__c/listViews/Beach_Contract_items.listView-meta.xml
<ListView>
    <fullName>Beach_Contract_items</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Contract__c</columns>
    <columns>Contract_unit__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Rate__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client__c</field>
        <operation>equals</operation>
        <value>Beach Energy Limited</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>rig 16,transport,camp 7</value>
    </filters>
    <filters>
        <field>Contract_unit__c</field>
        <operation>equals</operation>
        <value>005</value>
    </filters>
    <label>005-Beach Rig #16/Camp #4</label>
    <sharedTo>
        <group>Finance</group>
        <group>OPs_super</group>
        <group>Rig_16</group>
    </sharedTo>
</ListView>