force-app/main/default/objects/Services_Received__c/listViews/New_rates.listView-meta.xml
<ListView>
    <fullName>New_rates</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Contract__c</columns>
    <columns>Contract_unit__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Rate__c</columns>
    <columns>Operations__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_unit__c</field>
        <operation>equals</operation>
        <value>022</value>
    </filters>
    <filters>
        <field>Operations__c</field>
        <operation>equals</operation>
        <value>12hr,12hr/24hr</value>
    </filters>
    <label>022-Santos GLNG Rig#4/Camp #3 12hr</label>
    <sharedTo>
        <group>Finance</group>
    </sharedTo>
</ListView>