force-app/main/default/objects/Services_Received__c/listViews/New_rates_24.listView-meta.xml
<ListView>
    <fullName>New_rates_24</fullName>
    <columns>Contract__c</columns>
    <columns>Contract_unit__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Rate__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_unit__c</field>
        <operation>equals</operation>
        <value>022</value>
    </filters>
    <filters>
        <field>Operations__c</field>
        <operation>equals</operation>
        <value>24hr,12hr/24hr</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>transport,rig 4</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Services_Received__c.Operations_Rig</value>
    </filters>
    <label>022-Santos GLNG Rig#4 24hr</label>
    <sharedTo>
        <group>Camp_3</group>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Rig_4</group>
        <role>Administration</role>
    </sharedTo>
</ListView>