force-app/main/default/objects/Services_Received__c/listViews/Rig10_Origin.listView-meta.xml
<ListView>
    <fullName>Rig10_Origin</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Contract__c</columns>
    <columns>Contract_unit__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Rate__c</columns>
    <columns>Operations__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_unit__c</field>
        <operation>equals</operation>
        <value>038</value>
    </filters>
    <filters>
        <field>Client__c</field>
        <operation>equals</operation>
        <value>origin energy</value>
    </filters>
    <filters>
        <field>Operations__c</field>
        <operation>equals</operation>
        <value>12hr,12hr/24hr</value>
    </filters>
    <label>038-Origin Energy Rig#10</label>
    <sharedTo>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Rigs_10</group>
    </sharedTo>
</ListView>