force-app/main/default/objects/Services_Received__c/listViews/Transport_Schedule_of_Rates.listView-meta.xml
<ListView>
    <fullName>Transport_Schedule_of_Rates</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Contract__c</columns>
    <columns>Contract_unit__c</columns>
    <columns>Client__c</columns>
    <columns>NAME</columns>
    <columns>Rate__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Services_Received__c.Operations_Transport</value>
    </filters>
    <label>000-WD Transport</label>
    <sharedTo>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Transport</group>
    </sharedTo>
</ListView>