force-app/main/default/objects/Services_Received__c/listViews/X018_Real_Energy_Camp_7.listView-meta.xml
<ListView>
    <fullName>X018_Real_Energy_Camp_7</fullName>
    <columns>Contract__c</columns>
    <columns>Contract_unit__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Rate__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client__c</field>
        <operation>equals</operation>
        <value>Real Energy Corporation Limited</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>Camp 7</value>
    </filters>
    <filters>
        <field>Contract_unit__c</field>
        <operation>equals</operation>
        <value>018</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Services_Received__c.Operations_Rig</value>
    </filters>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>018</value>
    </filters>
    <label>018-Real Energy Camp #7 (Camp Only)</label>
    <sharedTo>
        <group>Transport</group>
    </sharedTo>
</ListView>