force-app/main/default/objects/Services_Received__c/listViews/X019_Strike_Rig_16.listView-meta.xml
<ListView>
    <fullName>X019_Strike_Rig_16</fullName>
    <columns>Contract_unit__c</columns>
    <columns>Contract__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Rate__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client__c</field>
        <operation>equals</operation>
        <value>Strike Energy Ltd</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>rig 16,transport</value>
    </filters>
    <filters>
        <field>Contract_unit__c</field>
        <operation>equals</operation>
        <value>019</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Services_Received__c.Operations_Rig</value>
    </filters>
    <label>019-Strike Rig #16</label>
    <sharedTo>
        <group>Finance</group>
        <group>OPs_super</group>
        <group>Transport</group>
    </sharedTo>
</ListView>