force-app/main/default/objects/Services_Received__c/listViews/X023_SSA_Rig_6_Camp_2.listView-meta.xml
<ListView>
    <fullName>X023_SSA_Rig_6_Camp_2</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Contract__c</columns>
    <columns>Contract_unit__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Rate__c</columns>
    <columns>Admin_Fee__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client__c</field>
        <operation>equals</operation>
        <value>santos sa</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>rig 6,camp 2,transport</value>
    </filters>
    <filters>
        <field>Contract_unit__c</field>
        <operation>equals</operation>
        <value>023</value>
    </filters>
    <label>023-Santos SA Rig #6/Camp #2</label>
    <sharedTo>
        <group>Camp_2</group>
        <group>Finance</group>
        <group>OPs_super</group>
        <group>Rig_6</group>
    </sharedTo>
</ListView>