force-app/main/default/objects/Services_Received__c/listViews/X025_Santos_GLNG_Flushby_2.listView-meta.xml
<ListView>
    <fullName>X025_Santos_GLNG_Flushby_2</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Contract__c</columns>
    <columns>Contract_unit__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_unit__c</field>
        <operation>equals</operation>
        <value>025</value>
    </filters>
    <filters>
        <field>Client__c</field>
        <operation>equals</operation>
        <value>Santos GLNG (QLD)</value>
    </filters>
    <label>025-Santos GLNG Flushby #2</label>
    <sharedTo>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Transport</group>
    </sharedTo>
</ListView>