force-app/main/default/objects/Services_Received__c/listViews/X027_Origin_Rig_18_Camp_3.listView-meta.xml
<ListView>
    <fullName>X027_Origin_Rig_18_Camp_3</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Contract__c</columns>
    <columns>Contract_unit__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Rate__c</columns>
    <columns>Status__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Admin_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client__c</field>
        <operation>equals</operation>
        <value>origin energy</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>notEqual</operation>
        <value>camp 3</value>
    </filters>
    <filters>
        <field>Contract_unit__c</field>
        <operation>equals</operation>
        <value>027</value>
    </filters>
    <label>027-Origin Rig #18</label>
    <sharedTo>
        <group>Camp_3</group>
        <group>Finance</group>
        <group>OPs_super</group>
        <group>Transport</group>
    </sharedTo>
</ListView>