force-app/main/default/objects/Services_Received__c/listViews/X028_Rig_16_Lochard.listView-meta.xml
<ListView>
    <fullName>X028_Rig_16_Lochard</fullName>
    <columns>RECORDTYPE</columns>
    <columns>WD_Unit__c</columns>
    <columns>Contract__c</columns>
    <columns>Contract_unit__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Rate__c</columns>
    <columns>Admin_Fee__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client__c</field>
        <operation>equals</operation>
        <value>lochard energy</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>rig 16,transport</value>
    </filters>
    <filters>
        <field>Contract_unit__c</field>
        <operation>equals</operation>
        <value>028</value>
    </filters>
    <label>028-Rig 16 Lochard</label>
    <sharedTo>
        <group>Finance</group>
        <group>OPs_super</group>
        <group>Rig_16</group>
        <group>Transport</group>
    </sharedTo>
</ListView>